--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.115.8
 matplotlib==3.10.1
 numpy==1.26.4
-ollama==0.4.7
+langchain==0.3.26
+langchain-core==0.3.69
+langchain-openai==0.3.28
 openai-whisper==20240930
 openpyxl==3.1.5
 pandas==2.2.3
